#2228 revert java 21 migration