@@ -99,7 +99,7 @@ public class DepthFirstTraverseStep extends AbstractTraverseStep {
   @Override
   protected void fetchNextResults(final CommandContext context, final int nRecords) {
     if (!this.entryPoints.isEmpty()) {
-      final TraverseResult item = (TraverseResult) this.entryPoints.removeFirst();
+      final TraverseResult item = (TraverseResult) this.entryPoints.remove(0);
       this.results.add(item);
       for (final TraverseProjectionItem proj : projections) {
         final Object nextStep = proj.execute(item, context);
@@ -191,7 +191,7 @@ public class DepthFirstTraverseStep extends AbstractTraverseStep {
 
   private void tryAddEntryPoint(final Result res, final CommandContext context) {
     if (whileClause == null || whileClause.matchesFilters(res, context)) {
-      this.entryPoints.addFirst(res);
+      this.entryPoints.add(0,res);
     }
 
     if (res.isElement())
