@@ -54,9 +54,9 @@ public class JJTSqlParserState {
      stack.  */
   public Node popNode() {
     if (--sp < mk) {
-      mk = marks.removeLast();
+      mk = marks.remove(nodes.size() - 1);
     }
-    return nodes.removeLast();
+    return nodes.remove(nodes.size() - 1);
   }
 
   /* Returns the number of children on the stack in the current node
@@ -69,7 +69,7 @@ public class JJTSqlParserState {
     while (sp > mk) {
       popNode();
     }
-    mk = marks.removeLast();
+    mk = marks.remove(marks.size() - 1);
   }
 
   public void openNodeScope(Node n) {
@@ -86,7 +86,7 @@ public class JJTSqlParserState {
   public void closeNodeScope(Node n, boolean condition) {
     if (condition) {
       int a = nodeArity();
-      mk = marks.removeLast();
+      mk = marks.remove(marks.size() - 1);
       while (a-- > 0) {
         Node c = popNode();
         c.jjtSetParent(n);
@@ -95,7 +95,7 @@ public class JJTSqlParserState {
       n.jjtClose();
       pushNode(n);
     } else {
-      mk = marks.removeLast();
+      mk = marks.remove(marks.size() - 1);
     }
   }
 }
