@@ -97,8 +97,8 @@ public class Projection extends SimpleNode {
       throw new IllegalStateException("This is an expand projection, it cannot be calculated as a single result" + this);
 
     if (items.size() == 1 &&
-        items.getFirst().getExpression().toString().equals("@this") &&
-        items.getFirst().nestedProjection == null)
+        items.get(0).getExpression().toString().equals("@this") &&
+        items.get(0).nestedProjection == null)
       return record;
 
     final ResultInternal result = new ResultInternal(context.getDatabase());
@@ -165,7 +165,7 @@ public class Projection extends SimpleNode {
   }
 
   public boolean isExpand() {
-    return items != null && items.size() == 1 && items.getFirst().isExpand();
+    return items != null && items.size() == 1 && items.get(0).isExpand();
   }
 
   public void validate() {
@@ -180,7 +180,7 @@ public class Projection extends SimpleNode {
   public Projection getExpandContent() {
     final Projection result = new Projection(-1);
     result.setItems(new ArrayList<>());
-    result.getItems().add(this.getItems().getFirst().getExpandContent());
+    result.getItems().add(this.getItems().get(0).getExpandContent());
     return result;
   }
 
